Name:           hscurses
Version:        1.4.2.0
License:        LGPL
License-file:   LICENSE
Author:         John Meacham <john at repetae dot net>
                Tuomo Valkonen <tuomov at iki.fi>
                Don Stewart <http://www.cse.unsw.edu.au/~dons>
                Stefan Wehr <http://www.stefanwehr.de>
Copyright:      Stefan Wehr 2004 - 2011
                Don Stewart 2004
                Tuomo Valkonen 2004
                John Meacham 2002-2004
Maintainer:     Stefan Wehr <http://www.stefanwehr.de>
Stability:      Stable
Category:       User-interface
Synopsis:       NCurses bindings for Haskell
Description:
    Binding to NCurses, a library of functions that manage an
    application's display on character-cell terminals. Additionally,
    it contains some basic widgets such as a text input widget and
    a table widget.
Homepage:       https://github.com/skogsbaer/hscurses
Cabal-version:  >= 1.10
Build-Type:     Configure
Tested-with:    GHC==7.6.1
              , GHC==7.8
              , GHC==9.4.8
              , GHC==9.6.6
              , GHC==9.8.4
              , GHC==9.10.1
              , GHC==9.12.1
Data-files:
    README, TODO, ChangeLog, cbits/config.h.in,
    configure, configure.ac, hscurses.buildinfo.in,
    cbits/HSCurses.h, cbits/HSCursesUtils.h

Source-Repository head
  Type:           git
  Location:       https://github.com/skogsbaer/hscurses

Flag examples
  Description:    Build test and example binaries
  Default:        False
  Manual:         True

Library
  Build-depends:  base == 4.*
                , exceptions < 0.11
                , mtl < 2.4
                , time < 1.13
  Extra-libraries: curses
  If !os(windows)
    Build-depends: unix < 2.9
  Exposed-modules:
      UI.HSCurses.Curses, UI.HSCurses.CursesHelper, UI.HSCurses.Widgets,
      UI.HSCurses.Logging
  Other-modules:
      UI.HSCurses.CWString, UI.HSCurses.IConv
  C-sources:
      cbits/HSCursesUtils.c
  Includes:
      HSCurses.h, HSCursesUtils.h
  Default-extensions:
      CPP, ForeignFunctionInterface, GeneralizedNewtypeDeriving,
      ScopedTypeVariables, ExistentialQuantification
  Include-dirs:     cbits .
  Ghc-options:      -funbox-strict-fields -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  Default-language: Haskell2010

Executable contact-manager
  If flag(examples)
    Build-depends: base>3, hscurses, mtl, pretty
  Else
    Buildable: False
  Hs-source-dirs:   example
  Default-language: Haskell2010
  Main-is:          ContactManager.hs

Executable key-test
  If flag(examples)
    Build-depends: base>3, hscurses
  Else
    Buildable: False
  Hs-source-dirs:   tests/key-test
  Default-language: Haskell2010
  Main-is:          KeyTest.hs

Executable widget-test-text
  If flag(examples)
    Build-depends: base>3, hscurses
  Else
    Buildable: False
  Hs-source-dirs:   tests/widget-test
  Default-language: Haskell2010
  Main-is:          TextTest.hs

Executable widget-test-table
  If flag(examples)
    Build-depends: base>3, hscurses
  Else
    Buildable: False
  Hs-source-dirs:   tests/widget-test
  Default-language: Haskell2010
  Main-is:          TableTest.hs

Executable widget-test-edit
  If flag(examples)
    Build-depends: base>3, hscurses
  Else
    Buildable: False
  Hs-source-dirs:   tests/widget-test
  Default-language: Haskell2010
  Main-is:          EditTest.hs
