Name:          contact-manager
Synopsis:      Primitive addressbook
Version:       0.1
License:       GPL
License-file:  ../LICENSE
Author:   Stefan Wehr <http://www.informatik.uni-freiburg.de/~wehr>

Build-Depends:       base>3, hscurses >= 1.2, mtl, pretty
Build-Type:          Simple

Executable:          cm
Main-Is:             ContactManager.hs
ghc-options:         -funbox-strict-fields -threaded

